'Built with' list is generating for each project from ProjectData.js on the PortfolioCard.js component.

--- a/react-portfolio/src/components/Portfolio/Portfolio.css
+++ b/react-portfolio/src/components/Portfolio/Portfolio.css
@@ -3,7 +3,7 @@
     background-color: aqua;
 }
 
-.proj-gal-item {
+/* .proj-gal-item {
     width: 500px;
     height: 500px;
     background-color: lightblue;
@@ -28,4 +28,4 @@
     height: 400px;
     background-size: cover;
     margin: 10px;
-}
+} */
