--- a/react-portfolio/src/components/Portfolio/Portfolio.css
+++ b/react-portfolio/src/components/Portfolio/Portfolio.css
@@ -18,7 +18,6 @@
 }
 
 
-
 /* .project-div {
     background-image: url(./../../assets/images/400x400.png);
     width: 400px;
@@ -27,10 +26,21 @@
     margin: 10px;
 } */
 
-.project-stayAlive {
+/* .project-stayAlive {
     background-image: url(./../../assets/images/stayAlive.png);
     width: 400px;
     height: 400px;
     background-size: cover;
     margin: 10px;
-} 
+}  */
+
+.object1{
+    width: 100%;
+    height: 200px;
+}
+.object1-bg{
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    background-image: url("./../../assets/images/Valhalla.png")
+}
